Fix server error on initialization of nav bar; make hamburger menu also compress on scroll; fix nav bar hiding top of page when banner is visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,5 @@
 }
 
 body {
-  margin-top: 100px;
+  margin-top: 140px;
 }
